fixed textarea jumping

--- a/css/order.css
+++ b/css/order.css
@@ -25,13 +25,13 @@ select, input[type='text'] , textarea, input[type='tel'] , input[type='email']
 	width: 100%;
 	padding: calc(10px + 1.5vw);
 }
-select, input[type='text'], textarea,
+select, input[type='text'],
 #email,
 #telnum
 {
-	display: inline-block;
-	width: 95%;
 	margin: 10px 0 10px 0;
+	width: 95%;
+	display: inline-block;
 }
 select:hover,
 select:focus,
